--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="home-content">
                 <h1>Hi, i'm Trinelle Younga</h1>
                 <h3>Student</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum cum ipsam, qui quia odit doloribus perferendis, atque veniam facere, amet harum esse earum illo ut sapiente consectetur?</p>
+                <p>Lorem ipsum dolor fit sit amet consectetur adipisicing elit. Illum cum ipsam, qui quia odit doloribus perferendis, atque veniam facere, amet harum esse earum illo ut sapiente consectetur?</p>
                 <div class="btn-box">
                     <a href="#">Hire me</a>
                     <a href="#">Let's talk</a>
